src/pages/Restaurant/Sidetab.css
.ant-layout-sider ::-webkit-scrollbar {
    width: 6px;
}

.ant-layout-sider ::-webkit-scrollbar-track {
    background: rgba(255, 255, 255, 0.1);
}

.ant-layout-sider ::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.2);
    border-radius: 4px;
}

.ant-layout-sider ::-webkit-scrollbar-thumb:hover {
    background: rgba(255, 255, 255, 0.3);
}

